# uncpi

./: .gitignore  ACHIEVEMENT-SUMMARY.md  CLAUDE.md  CLMM-ANALYSIS.md  CLMM-COMPLETE.md  COMPREHENSIVE-TESTING.md  Cargo.toml  FINAL-REPORT.md  FINAL-RESULTS.md  LICENSE  PRODUCTION-VALIDATION.md  README.md  TESTING-SUMMARY.md  TESTING_RESULTS.md
.github/: RELEASE.md
.github/workflows/: ci.yml  release.yml
docs/: ACCOUNT_LOADER_DESIGN.md  ADVANCED_CPI_DESIGN.md  VECDEQUE_DESIGN.md  VEC_SUPPORT_DESIGN.md
src/: collections.rs  cpi_helpers.rs  idl.rs  ir.rs  main.rs  zero_copy.rs
src/analyzer/: mod.rs
src/emitter/: mod.rs
src/parser/: mod.rs
src/transformer/: mod.rs
tests/: integration_test.rs
